# VEGAVideoServer

./: .gitignore  CMakeLists.txt  Decoder.cpp  Decoder.h  EncoderJPEG.cpp  EncoderJPEG.h  FFDecoderInstance.h  FFH264DecoderInstance.cpp  FFH264DecoderInstance.h  FFImageFrame.cpp  FFImageFrame.h  FFImageHttpSink.cpp  FFImageHttpSink.h  FFJPEGEncoderInstance.cpp  FFJPEGEncoderInstance.h  FFMpegFileSave.cpp  FFMpegFileSave.h  FFPlayerInstance.cpp  FFPlayerInstance.h  FileSave.cpp  FileSave.h  HTTPServer.cpp  HTTPServer.h  IPacketReader.h  JPEGHttpSink.cpp  MavContext.cpp  MavContext.h  MavUDP.cpp  MavUDP.h  MavlinkParser.cpp  MavlinkParser.h  README.md  VideoSource.cpp  VideoSource.h  helper.h  log.h  main.cpp
cmake/: FindBoost.cmake  FindEvent.cmake  FindExiv.cmake  FindFFmpeg.cmake  FindGeoInterface.cmake  FindSpdlog.cmake
filesink/: FileSave.cpp  FileSave.h
httpsink/: EncoderJPEG.h  JPEGHttpSink.cpp  JPEGHttpSink.h
linux/: vegavideoserver.service
telem/: MavUDP.cpp  MavUDP.h  MavlinkParser.cpp
